# syn_data_csv

./: .gitignore  README.md  local_run.sh  pyproject.toml  setup.py  synthetic_data.csv  synthetic_data1.csv  synthetic_data_new.csv
.github/workflows/: demo.yml  get_syn_data_csv.yml  manual.yml
app/: ai_accelerators.py  constants.py  generate_data.py  generate_text_prompt.py  main.py  validate.py  validate_files.py
datasets/: smart_ev_charging_data.csv  trace_data.csv
oops/: ouput.py
src/: config.yaml  data_types.txt  groq_test.py  local_run.sh  mistral_code.py  syn.py  synthetic_data.csv  test1.py  to do.txt
src/app/: generate_data.py  main.py
src/config_files/: config.yaml
src/oops/: generate_data.py  main.py  validate.py
src/src/: config.yaml  test2.py  tokens.txt
src/src/app/: generate_text_prompt.py
src/text_files/: prompts.txt  to do.txt
syn_data_csv/: .gitignore  .pypirc  config.yaml  constants.py  generate_data.py  llm_setup.py  local_run.sh  output.py  pyproject.toml  requirements.txt  synthetic_data.csv  validate_files.py
syn_data_csv/.github/workflows/: test.yaml
syn_data_csv/app/: __init__.py  generate_data.py  llm_providers.py  llm_setup.py  main.py
syn_data_csv/app/adapters/: groq_adapter.py  hf_adapter.py
syn_data_gen/: local_run.sh
syn_data_gen/app/: generate_data.py  generate_text_prompt.py  main.py
syn_data_gen/oops/: main.py
syn_data_gen/text_files/: requirements.txt  to do.txt
test_codes/: test1.py
text_files/: Testing.txt  requirements.txt  tokens.txt
text_files/CI/: llm_providers.txt  process.txt
(+4 files in other folders)
