[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "syn_data_csv"
version = "0.1.0"
description = "Generating Synthetic Data"
readme = "README.md"
authors = [
    { name = "Shyam Kota", email = "shyamsundar.kota@infoservices.com" }
]
requires-python = ">=3.11"
dependencies = [
    "groq>=0.25.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]

[tool.setuptools]
packages = ["app"]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.package-data]
"app" = ["../config_files/*.yaml", "../datasets/*.csv"]